@@ -92,7 +92,7 @@ public:
         }
 
     //- Compute capillary capacity from head pressure and return moisture (Richards' model)
-    volScalarField correctAndSb(volScalarField& h)
+    tmp<volScalarField> correctAndSb(volScalarField& h)
         {
             //- Compute Saturation from head pressure
             h.dimensions().reset(dimless);
@@ -104,10 +104,8 @@ public:
             Ch_ = alpha_*m_*(Smax_-Smin_)/(1.0-m_)*pow(Se_,1.0/m_)*pow(1.0-pow(Se_,1.0/m_),m_) ;
             Ch_.dimensions().reset(dimless/dimLength);
 
-            //- Update saturation
-            volScalarField Stmp_(Smin_+(Smax_-Smin_)*Se_);
-    
-            return Stmp_;
+            //- Compute saturation
+            return Smin_+(Smax_-Smin_)*Se_;
         }
 
     //- Compute capillary capacity from head pressure and return moisture (Richards' model)
@@ -123,6 +121,16 @@ public:
             return Smin_[celli]+(Smax_[celli]-Smin_[celli])*Se;
         }
 
+    //- Compute saturation from given head pressure
+    tmp<volScalarField> S(volScalarField& h)
+        {
+            //- Compute Saturation from head pressure
+            h.dimensions().reset(dimless);
+            tmp<volScalarField> Se = neg(h+he_) *(1/Sc_)*pow(1.0+pow(alpha_*mag(h),n_),-m_) + pos(h+he_+VSMALL) ;
+            h.dimensions().reset(dimLength);
+            //- Return saturation
+            return Smin_+(Smax_-Smin_)*Se;
+        }
 };
 
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
